# forge-game-data

./: Cargo.toml
forge_game_data/: Cargo.toml
forge_game_data/examples/: derive.rs  manual.rs
forge_game_data/src/: lib.rs  model.rs
forge_game_data_derive/: Cargo.toml
forge_game_data_derive/src/: lib.rs
src/: de.rs  error.rs  lib.rs  model.rs  parsers.rs
